# manga-library-fr-bot

./: .env.example  .gitignore  README.md  colab_launcher.py  main.py  pyproject.toml
src/manga_fr_bot/: bot.py  config.py  models.py  storage.py
src/manga_fr_bot/adapters/: __init__.py  mangadex.py
