[project]
name = "manga-library-fr-bot"
version = "0.1.0"
description = "Telegram manga library bot focused on French chapters with a MangaDex-first catalog."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "pyrogram>=2.0.106",
  "tgcrypto>=1.2.5",
  "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
